fix: not responsive main content

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -46,6 +46,7 @@ header
     color: #F67280 !important
 
 main
+    width: 560px
     flex: 1
     display: flex
     flex-direction: column
